--- a/css/form.css
+++ b/css/form.css
@@ -54,3 +54,14 @@ error-output{
     font-style:  italic;
     color: red;
 }
+
+@media only screen and (max-width: 360px){
+    h1{
+        font-size: 40px;
+        text-align: center;
+    }
+    label{
+        width: 35%;
+        font-size:  10px;
+    }
+}
